--- a/app/src/main/res/layout/activity_example_image.xml
+++ b/app/src/main/res/layout/activity_example_image.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ExampleActivity">
 
-    <EditText
-        android:id="@+id/input_text"
+    <ImageView
+        android:id="@+id/iv_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="200dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:maxLength="150"
-
         android:gravity="center"
         android:hint="지금 감정을 글자로 표현해줘"
-        android:minHeight="48dp" />
+        android:minHeight="100dp"
+        android:scaleType="fitCenter"
+        app:srcCompat="@android:drawable/ic_menu_report_image"
+        tools:srcCompat="@tools:sample/avatars" />
+
+
 
     <Button
         android:gravity="center"
@@ -25,7 +29,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/input_text"
+        android:layout_below="@+id/iv_input"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:text="Submit" />
