--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="14dp"
+        android:radius="10dp"
         />
-    <solid
-        android:color="#373737"
-        />
-    <padding
+    <padding android:bottom="0dp"
         android:left="0dp"
-        android:top="0dp"
         android:right="0dp"
-        android:bottom="0dp"
-        />
-    <size
-        android:width="270dp"
-        android:height="60dp"
-        />
-    <stroke
-        android:width="3dp"
-        android:color="#878787"
-        />
+        android:top="0dp"/>
+    <solid android:color="@color/brown"/>
+
 </shape>
