--- a/app/src/main/res/layout/activity_face.xml
+++ b/app/src/main/res/layout/activity_face.xml
@@ -1,9 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FaceActivity">
+    tools:context=".ExampleActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:gravity="center"
+        android:id="@+id/btnPhoto"
+        android:layout_width="200dp"
+        android:layout_height="52dp"
+        android:background="@drawable/buttonshape2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:text="재촬영"
+        android:fontFamily="@font/nanummyeongjobold"
+        android:textColor="@color/font_black"
+        />
+
+
+    <ImageView
+        android:layout_centerHorizontal="true"
+        android:id="@+id/iv_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:adjustViewBounds="true"
+        android:maxHeight="300dp"
+        android:minHeight="100dp"
+        android:scaleType="fitCenter"
+        app:srcCompat="@android:drawable/ic_menu_report_image" />
+
+    <Button
+        android:gravity="center"
+        android:id="@+id/submit"
+        android:layout_width="200dp"
+        android:layout_height="52dp"
+        android:layout_below="@+id/iv_input"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/buttonshape"
+        android:text="감정분석"
+        android:textColor="@color/white"
+        android:fontFamily="@font/nanummyeongjobold"/>
+
+    <TextView
+        android:id="@+id/result_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/submit"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="center"
+        android:text="result"
+        android:textAlignment="center"
+        android:textSize="18sp" />
+
+</RelativeLayout>
