--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="brown">#CC9B6448</color>
+    <color name="light_gray">#B3F5F3F3</color>
+    <color name="font_black">#80000000</color>
+
 </resources>
