--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.KounkukCafe" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.KounkukCafe" parent="Theme.AppCompat.Light">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/brown</item>
+        <item name="colorPrimaryVariant">@color/brown</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/brown</item>
         <!-- Customize your theme here. -->
     </style>
 
@@ -19,7 +19,8 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.KounkukCafe.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.KounkukCafe.AppBarOverlay" parent="Theme.AppCompat.Light" />
 
     <style name="Theme.KounkukCafe.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
