--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -9,14 +9,14 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="52dp"
         android:layout_marginBottom="304dp"
         android:background="@drawable/buttonshape"
 
         android:text="음성 녹음"
-        android:textColor="@color/black"
-
+        android:textColor="@color/white"
+        android:fontFamily="@font/nanummyeongjobold"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,8 @@
         android:text="녹음된 음성이 여기에 표시됩니다."
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/nanummyeongjo"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -41,7 +42,8 @@
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/nanummyeongjo"/>
 
     <TextView
         android:id="@+id/result_text"
