VoiceActivity.kt기능 제거버전

--- a/app/src/main/res/layout/activity_voice_recording.xml
+++ b/app/src/main/res/layout/activity_voice_recording.xml
@@ -30,6 +30,7 @@
         app:layout_constraintTop_toBottomOf="@+id/asking_textView" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="308dp"
@@ -40,4 +41,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/asking_textView" />
+
+    <TextView
+        android:id="@+id/voice_recordedText"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginTop="152dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/voice_icon" />
 </androidx.constraintlayout.widget.ConstraintLayout>
