--- a/app/src/main/res/layout/activity_voice.xml
+++ b/app/src/main/res/layout/activity_voice.xml
@@ -7,70 +7,71 @@
     tools:context=".VoiceActivity">
 
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="200dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="304dp"
-        android:background="@drawable/buttonshape"
 
-        android:text="음성 녹음"
-        android:textColor="@color/white"
-        android:fontFamily="@font/nanummyeongjobold"
+    <ImageView
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="76dp"
-        android:text="녹음된 음성이 여기에 표시됩니다."
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        android:layout_width="205dp"
+        android:layout_height="238dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:fontFamily="@font/nanummyeongjo"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/voice_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="160dp"
-        android:text="음성 녹음 버튼을 누르면 감정 분석을 시작합니다"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+
+        android:layout_marginTop="256dp"
+        android:fontFamily="@font/nanummyeongjo"
+        android:text="건국가베와 가벼운 문답을 주고 받아보세요."
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        android:fontFamily="@font/nanummyeongjo"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/voice_textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/nanummyeongjo"
+
+        android:text="대화 내용과 목소리 톤을 인식하여 감정을 파악합니다."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/voice_textView" />
 
     <TextView
         android:id="@+id/result_text"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
-        android:layout_marginBottom="188dp"
+
+        android:layout_marginBottom="332dp"
         android:gravity="center"
-        android:text="감정분석결과"
+        android:text="당신의 목소리를 들려주세요."
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="0dp" />
 
     <Button
-        android:id="@+id/buttontolist"
+        android:id="@+id/button_to_next"
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="52dp"
         android:layout_below="@+id/result_text"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="64dp"
         android:gravity="center"
-        android:text="카페찾아보기"
+        android:text="확인"
+        android:textColor="@color/white"
+        android:fontFamily="@font/nanummyeongjobold"
+        android:background="@drawable/buttonshape"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result_text" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
