--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".SplashActivity">
+    tools:context=".SplashActivity"
+    android:background="@color/font_white">
 
     <ImageView
-        android:layout_width="275dp"
-        android:layout_height="275dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/logo"
-        android:layout_marginTop="150dp"/>
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:src="@drawable/logo3"
+        android:layout_marginTop="100dp"/>
 
 </LinearLayout>
