--- a/app/src/main/res/layout/activity_voice_recording.xml
+++ b/app/src/main/res/layout/activity_voice_recording.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VoiceRecordingActivity">
+    tools:context=".VoiceRecordingActivity"
+    android:background="@color/font_white">
 
     <TextView
         android:id="@+id/asking_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="160dp"
-        android:textSize="25sp"
+        android:textSize="20dp"
         android:textColor="@color/brown"
-        android:fontFamily="@font/nanummyeongjobold"
+        android:fontFamily="@font/nanummyeongjoextrabold"
         android:text="오늘 하루는 어떠셨나요?"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +25,7 @@
         android:layout_width="148dp"
         android:layout_height="155dp"
         android:layout_marginTop="60dp"
-        android:src="@android:drawable/ic_btn_speak_now"
+        android:src="@drawable/recording"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/asking_textView" />
@@ -33,14 +34,14 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="308dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/nanummyeongjobold"
         android:text="인식 중"
         android:textColor="@color/brown"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/asking_textView" />
+        app:layout_constraintTop_toBottomOf="@+id/voice_icon" />
 
     <TextView
         android:id="@+id/voice_recordedText"
