--- a/app/src/main/res/layout/item_cafe.xml
+++ b/app/src/main/res/layout/item_cafe.xml
@@ -20,7 +20,7 @@
 
     <TextView
         android:layout_marginLeft="30dp"
-        android:textColor="@color/teal_200"
+        android:textColor="@color/brown"
         android:id="@+id/cafe_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
