--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="brown">#CC9B6448</color>
+    <color name="dark_brown">#4C372B</color>
     <color name="light_gray">#B3F5F3F3</color>
     <color name="font_black">#80000000</color>
     <color name="font_white">#FEFAEE</color>
