--- a/app/src/main/res/layout/activity_voice_loading.xml
+++ b/app/src/main/res/layout/activity_voice_loading.xml
@@ -4,19 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VoiceLoadingActivity">
+    tools:context=".VoiceLoadingActivity"
+    android:background="@color/font_white">
 
     <ImageView
-
         android:id="@+id/imageView2"
         android:layout_width="151dp"
         android:layout_height="186dp"
-
         android:layout_marginTop="224dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
+        app:srcCompat="@drawable/loading" />
 
     <TextView
         android:layout_width="wrap_content"
