--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -30,7 +30,15 @@
         android:id="@+id/emotion_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"/>
+        android:textSize="20sp"
+        android:text="행복"
+        android:layout_marginTop="40dp" />
+    <TextView
+        android:id="@+id/emotion_accu"
+        android:layout_width="wrap_content"
+        android:text="예상 정확도 ㅁㅁ.ㅁ%"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp" />
 
     <View
         android:layout_width="352dp"
