--- a/app/src/main/res/layout/activity_voice_recording.xml
+++ b/app/src/main/res/layout/activity_voice_recording.xml
@@ -56,7 +56,7 @@
         android:id="@+id/question_retry_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="152dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/buttonshape"
         android:text="다시 대화하기"
 
@@ -64,5 +64,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/voice_icon" />
+        app:layout_constraintTop_toBottomOf="@+id/voice_recordedText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
