--- a/app/src/main/res/layout/activity_cafe_list.xml
+++ b/app/src/main/res/layout/activity_cafe_list.xml
@@ -6,12 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".CafeListActivity">
 
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="24sp"
+            android:gravity="center"
+            android:padding="16dp" />
+
+
+
+    </RelativeLayout>
+
     <net.daum.mf.map.api.MapView
         android:id="@+id/map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="200dp"
-         />
+        android:layout_marginTop="?attr/actionBarSize"
+        />
 
     <LinearLayout
         android:id="@+id/bottom_sheet"
@@ -21,7 +40,6 @@
         android:fillViewport="true"
         android:orientation="vertical"
         >
-
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
