이미지버튼 사진 수정

--- a/app/src/main/res/layout/activity_cafe_list.xml
+++ b/app/src/main/res/layout/activity_cafe_list.xml
@@ -18,7 +18,10 @@
             android:text=""
             android:textSize="24sp"
             android:gravity="center"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:background="@color/dark_brown"
+            android:textColor="@color/font_white"
+            android:fontFamily="@font/nanummyeongjoextrabold"/>
 
 
 
