--- a/app/src/main/res/layout/activity_voice_recording.xml
+++ b/app/src/main/res/layout/activity_voice_recording.xml
@@ -59,6 +59,8 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/buttonshape"
         android:text="다시 대화하기"
+        android:fontFamily="@font/nanummyeongjobold"
+        android:textColor="@color/font_white"
 
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
