--- a/app/src/main/res/layout/activity_face.xml
+++ b/app/src/main/res/layout/activity_face.xml
@@ -21,31 +21,36 @@
         android:minHeight="100dp"
         android:scaleType="fitCenter"
         app:srcCompat="@android:drawable/ic_menu_report_image" />
+
     <Button
-        android:gravity="center"
         android:id="@+id/submit"
-        android:layout_width="200dp"
+        android:layout_width="180dp"
         android:layout_height="52dp"
         android:layout_below="@+id/iv_input"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:background="@drawable/buttonshape"
-        android:text="감정분석"
-        android:textColor="@color/white"
-        android:fontFamily="@font/nanummyeongjobold"/>
-    <Button
-        android:gravity="center"
-        android:id="@+id/btnPhoto"
-        android:layout_width="200dp"
-        android:layout_height="52dp"
-        android:background="@drawable/buttonshape2"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/submit"
-        android:layout_marginTop="30dp"
-        android:text="재촬영"
         android:fontFamily="@font/nanummyeongjobold"
+        android:gravity="center"
+        android:text="감정분석"
+        android:textColor="@color/font_white"
+        android:textSize="15dp"
+        tools:ignore="TextSizeCheck" />
+
+    <Button
+        android:id="@+id/btnPhoto"
+        android:layout_width="180dp"
+        android:layout_height="52dp"
+        android:layout_below="@+id/submit"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/buttonshape2"
+        android:fontFamily="@font/nanummyeongjobold"
+        android:gravity="center"
+        android:text="재촬영"
         android:textColor="@color/font_black"
-        />
+        android:textSize="15dp"
+        tools:ignore="TextSizeCheck" />
     <TextView
         android:id="@+id/result_text"
         android:visibility="gone"
