--- a/app/src/main/res/layout/item_cafe.xml
+++ b/app/src/main/res/layout/item_cafe.xml
@@ -15,16 +15,18 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:text="카페명"
+        android:fontFamily="@font/nanummyeongjoextrabold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="20dp"
         android:textColor="@color/brown"
         android:id="@+id/cafe_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="3.4"
+        android:fontFamily="@font/nanummyeongjobold"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/cafe_name"
         app:layout_constraintStart_toEndOf="@id/cafe_name"
@@ -36,6 +38,8 @@
         android:layout_height="wrap_content"
         android:text="000-000-000"
         android:textSize="16sp"
+        android:fontFamily="@font/nanummyeongjobold"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cafe_address" />
 
@@ -45,18 +49,47 @@
         android:layout_height="wrap_content"
         android:text="addrr"
         android:textSize="16sp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/nanummyeongjobold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cafe_name" />
 
-    <TextView
-        android:id="@+id/cafe_text"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/framelayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@drawable/layout_background"
+        android:padding="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cafe_phone">
 
-        android:text="aaaa"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cafe_phone"
-        app:layout_constraintTop_toBottomOf="@+id/cafe_phone" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_format_quote_24"
+            android:scaleX="-1"/>
+
+        <TextView
+            android:id="@+id/cafe_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="aaaa"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/nanummyeongjo"
+            android:textSize="16sp" />
+    </FrameLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/brown"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/framelayout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
